# lynda-crm-public

./: README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  middleware.py
app/models/: user.py
app/routers/: chat.py  exports.py  next_steps.py
app/services/: llm.py  tool_dispatch.py
app/services/voice/: preflight.py
evals/: README.md  promptfooconfig.yaml
frontend/: index.html  vite.config.ts
frontend/src/api/: client.ts
frontend/src/components/: ChatInterface.tsx  ContactCard.tsx  ContactCardExpanded.tsx  DictationButton.tsx  DinLogo.tsx  InstallPrompt.tsx  countryToFlag.ts
frontend/src/hooks/: useTTSPlayback.ts
frontend/src/pages/: Intro.tsx
scripts/: seed_dummy_data.py
tests/: test_enterprise_mode_guard.py  test_next_steps.py  test_tool_dispatch.py  test_voice_preflight.py
